k8s/traffic-generator-pod.yaml
# Keeping Deployment and Pod templates in the same file can be more convenient and manageable.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator-pod
  labels:
    app: traffic-generator-pod
spec:
  replicas: 1 # Deployment is responsible for managing this number of Pods
  selector:
    matchLabels:
      app: traffic-generator-pod
  template:
    metadata:
      labels:
        app: traffic-generator-pod  # Pod template
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
      - name: traffic-generator
        image: nginx:alpine
        command: ["/bin/sh"]
        args: 
          - "-c"
          - |
            [...]
        ports:
        - containerPort: 8080
          name: metrics
        resources:
          requests:
            memory: "100Mi"   
            cpu: "500m"      
          limits:
            memory: "300Mi"   
            cpu: "600m"
